==> dustin-crossman/mbed-os/targets/TARGET_WICED_SRC/WICED/WICED/platform/MCU/TARGET_PSOC6/WWD/TARGET_PSOC6_01/wwd_SDIO.c <==
#include "cy8c6247bzi_d54.h"
#include <stdbool.h>
#include <string.h> /* For memcpy */
#include "wwd_platform_common.h"
#include "wwd_bus_protocol.h"
#include "wwd_assert.h"
#include "platform/wwd_platform_interface.h"
#include "platform/wwd_sdio_interface.h"
#include "platform/wwd_bus_interface.h"
#include "RTOS/wwd_rtos_interface.h"
#include "network/wwd_network_constants.h"
#include "w_platform_cmsis.h"
#include "w_platform_peripheral.h"
#include "w_platform_config.h"
#include "wwd_rtos_isr.h"
#define VERIFY_SDIF_API_RESULT( x ) \
    { \
        en_sdio_result_t api_result; \
        api_result = (x); \
        if ( api_result != Ok ) \
        { \
            wiced_assert( "command failed", ( 0 == 1 )); \
            return WWD_SDIO_BUS_UP_FAIL; \
        } \
    }
#define BUS_LEVEL_MAX_RETRIES                (5)
#define SDIO_ENUMERATION_TIMEOUT_MS          (500)

wwd_result_t host_enable_oob_interrupt( void )
{
    /* TODO: Setup WiFi OOB interrupt GPIO pin (if required) for PSoC 6 */
    platform_gpio_init( &wifi_sdio_pins[WWD_PIN_SDIO_OOB_IRQ], INPUT_HIGH_IMPEDANCE );
    platform_gpio_irq_enable( &wifi_sdio_pins[WWD_PIN_SDIO_OOB_IRQ], IRQ_TRIGGER_RISING_EDGE, sdio_oob_irq_handler, 0 );
    return WWD_SUCCESS;
}

wwd_result_t host_platform_bus_init( void )
{
    wwd_result_t        result = WWD_SUCCESS;
    stc_sdio_irq_cb_t   irq_cbs;
    uint32_t            flags;

    platform_mcu_powersave_disable();

#ifdef WICED_WIFI_USE_GPIO_FOR_BOOTSTRAP_0
    /* TODO: Setup GPIO pin (if required) to put WLAN module into SDIO mode on PSoC 6 */
    platform_gpio_init( &wifi_control_pins[WWD_PIN_BOOTSTRAP_0], OUTPUT_PUSH_PULL );
    platform_gpio_output_low( &wifi_control_pins[WWD_PIN_BOOTSTRAP_0] );
#endif
#ifdef WICED_WIFI_USE_GPIO_FOR_BOOTSTRAP_1
    /* TODO: Setup GPIO pin (if required) to put WLAN module into SDIO mode on PSoC 6 */
    platform_gpio_init( &wifi_control_pins[WWD_PIN_BOOTSTRAP_1], OUTPUT_PUSH_PULL );
    platform_gpio_output_low( &wifi_control_pins[WWD_PIN_BOOTSTRAP_1] );
#endif

    irq_cbs.pfnCardIntCb      =wwd_thread_notify_IRQHandler;

    /* WiFi into reset */
    Cy_SysLib_Delay( 10 );
    Cy_GPIO_Write( GPIO_PRT2,6u, 0 );
    Cy_SysLib_Delay( 10 );

    /* Init SDIO Host */
    SDIO_Init( &irq_cbs );

    /* WiFi out of reset */
    Cy_SysLib_Delay( 10 );
    Cy_GPIO_Write( GPIO_PRT2,6u, 1 );
    Cy_SysLib_Delay( 10 );

    /* SDIO Host out of reset */
    SDIO_Reset();

    platform_mcu_powersave_enable();

    return result;
}

wwd_result_t host_platform_sdio_transfer( wwd_bus_transfer_direction_t direction, sdio_command_t command, sdio_transfer_mode_t mode, sdio_block_size_t block_size, uint32_t argument, /*@null@*/ uint32_t* data, uint16_t data_size, sdio_response_needed_t response_expected, /*@out@*/ /*@null@*/ uint32_t* response )
{
    wwd_result_t result;
    uint16_t attempts = 0;
    stc_sdio_cmd_t cmd = { 0 };
    uint32_t cmdResponse;

    wiced_assert("Bad args", !((command == SDIO_CMD_53) && (data == NULL)));

    if ( response != NULL )
    {
        *response = 0;
    }

    platform_mcu_powersave_disable();

restart:
    ++attempts;

    /* Check if we've tried too many times */
    if (attempts >= (uint16_t) BUS_LEVEL_MAX_RETRIES)
    {
        result = WWD_SDIO_RETRIES_EXCEEDED;
        goto exit;
    }

    /* Prepare the data transfer register */
    if ( command == SDIO_CMD_53 )
    {
        cmd.u32CmdIdx       = (uint32_t)command;
        cmd.u32Arg          = argument;
        cmd.pu8Data         = (uint8_t *)data;
        cmd.pu32Response    = &cmdResponse;

        if( mode == SDIO_BLOCK_MODE )
        {
            cmd.u16BlockSize    = block_size;
            cmd.u16BlockCnt     = (uint16_t)( data_size + block_size - 1 ) / block_size;
        }
        else
        {
            cmd.u16BlockSize    = data_size;
            cmd.u16BlockCnt     = 1;
        }

        cmd.bRead           = ( direction == BUS_WRITE ) ? false : true;

#ifndef WICED_PLATFORM_DOESNT_USE_TEMP_DMA_BUFFER
        if (( direction == BUS_READ ) && ( mode == SDIO_BLOCK_MODE ))
        {
            /* In this mode, we may be reading more than the requested size to round
             * up to the nearest multiple of block size. So, providing temp buffer
             * instead of the original buffer to avoid memory corruption
             */
            cmd.pu8Data         = (uint8_t *)temp_dma_buffer;
        }
#endif

        if( SDIO_SendCommandAndWait( &cmd ) != Ok )
        {
            goto restart;
        }

#ifndef WICED_PLATFORM_DOESNT_USE_TEMP_DMA_BUFFER
        if (( direction == BUS_READ ) && ( mode == SDIO_BLOCK_MODE ))
        {
            memcpy( data, temp_dma_buffer, (size_t) data_size );
        }
#endif
    }
    else
    {
        cmd.u32CmdIdx       = (uint32_t) command;
        cmd.u32Arg          = argument;
        cmd.pu8Data         = NULL;
        cmd.u16BlockSize    = 0x0;
        cmd.u16BlockCnt     = 0x0;
        cmd.bRead           = ( direction == BUS_WRITE ) ? false : true;
        cmd.pu32Response    = &cmdResponse;

        if ( SDIO_SendCommandAndWait( &cmd ) != Ok )
        {
            goto restart;
        }
    }

    if (( response != NULL ) && ( response_expected == RESPONSE_NEEDED))
    {
        *response = cmdResponse;
    }

    result = WWD_SUCCESS;

exit:
    platform_mcu_powersave_enable();
    return result;
}
